# python-page-loader

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml  travis.yml
loader/: logger.py
loader/core/: client.py  engine.py  files.py  logging.py  progress.py
loader/scripts/: loader.py
loader/utils/: engine_loader.py  logger.py  utils.py
page_loader/: client.py  loader.py  utils.py
page_loader/scripts/: hexlet-io-courses.html  loader.py
page_loader/utils/: client.py  logger.py  utils.py
tests/: test_loader.py
tests/c:\d/test/: test.html
tests/c:\winnt\file_nam/: test.html
