[tool.poetry]
name = "litovsky-page-loader"
version = "0.1.11"
description = "Page Loader"
authors = ["Alexander <berpress@gmail.com>"]
packages = [{ include = "loader" }]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
bs4 = "^0.0.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
loader = "loader.scripts.loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
